force-app/main/default/objects/ABML_Bank__c/fields/ABML_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ABML_Account_Number__c</fullName>
    <label>Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>