force-app/main/default/objects/ABML_Bank__c/fields/ABML_Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>ABML_Bank_Branch__c</fullName>
    <label>Bank Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>