force-app/main/default/objects/ABML_Bank__c/fields/ABML_Cheque_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_Cheque_Name__c</fullName>
    <label>Cheque Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>