force-app/main/default/objects/ABML_Bank__c/fields/ABML_Fund_Mode__c.field-meta.xml
<CustomField>
    <fullName>ABML_Fund_Mode__c</fullName>
    <label>Fund Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>