force-app/main/default/objects/ABML_Bank__c/fields/ABML_IFSC_code__c.field-meta.xml
<CustomField>
    <fullName>ABML_IFSC_code__c</fullName>
    <label>IFSC code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>