force-app/main/default/objects/ABML_Bank__c/fields/ABML_MICR__c.field-meta.xml
<CustomField>
    <fullName>ABML_MICR__c</fullName>
    <label>MICR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>