force-app/main/default/objects/ABML_Bank__c/fields/ABML_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>ABML_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Banks</relationshipName>
    <type>Lookup</type>
</CustomField>