force-app/main/default/objects/ABML_Bank__c/fields/ABML_POA__c.field-meta.xml
<CustomField>
    <fullName>ABML_POA__c</fullName>
    <label>POA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>