force-app/main/default/objects/ABML_Bank__c/fields/ABML_Product__c.field-meta.xml
<CustomField>
    <fullName>ABML_Product__c</fullName>
    <label>Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>