force-app/main/default/objects/ABML_Bank__c/fields/ABML_Segment__c.field-meta.xml
<CustomField>
    <fullName>ABML_Segment__c</fullName>
    <label>Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>