force-app/main/default/objects/ABML_Bank__c/fields/Bank_Unique__c.field-meta.xml
<CustomField>
    <fullName>Bank_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Bank Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>